# OTLMOW-Converter

./: .coverage  .gitattributes  MANIFEST.in  README.md  Readme.ipynb  benchmark_results.txt  commands.txt  pyproject.toml  requirements.txt  test_nan_fix.py
.github/workflows/: benchmark.yml  coverage.yml  release.yml  unittest.yml  zip_source.yml
SampleCode/: 00_convert_usage_examples.py  01_delete_assets.py  202306052304_relaties_OTN.csv  ANPR_deprecation_migration.py  OTN_relaties.py  add_docs_kasten_qr.py  beugels.py  bugfix_aimid.py  camera.py  cameras_open_data_2.json  converter_refactored.py  create.py  create_dev_aanlevering.py  create_kasten_qr.py  csv_to_ttl.py  geopackages.py  ifc_script.py  json_to_excel.py  legacy_to_geojson.py  legacy_to_xlsx.py  masten_namen.py  meteo.py  multipoints.py  normalisatie_exoten.py  notebook_scripts.py  pvdp_pandas.py  readme_demo.py  remove_kasten.py  segc_tei.py  simpel_vergelijking_template6.xlsx
UnitTests/: .coverage  AssetFactory_test.py  Combining_test.py  Converter_generic_test.py  Converter_generic_tests.py  Converter_high_level_async_test.py  Converter_high_level_test.py  DotnotatieOnAttributeTests.py  DotnotationHelperTests.py  DotnotationHelper_test.py  DotnotationOnAttributeTests.py  DotnotationOnAttribute_test.py  FileExporter_test.py  FileImporterTests.py  FileImporter_test.py  OTLObjectHelperTests.py  RelationCreatorTests.py  SettingManagerForUnitTests.py  TableExporterTests.py  TableExporter_test.py  converter_generic_tests.py  run_all_tests.py  run_all_tests_html.py  run_all_tests_notebook.py  run_all_tests_single_file_html.py  settings_OTLMOW.json  settings_OTLMOW_linux.json  test_file_to_dataframe.json
UnitTests/CSV/: CsvExporterTests.py  CsvExporter_test.py  CsvExporter_test_old.py  CsvImporterTests.py  CsvImporter_test.py  CsvImporter_test_old.py  template_file_text_onderdeel_AllCasesTestClass.csv
UnitTests/Combine/: asset_1.csv  asset_1.json  asset_1.xlsx  asset_2.csv  asset_2.json  asset_3.csv  asset_3.geojson  asset_3.json
UnitTests/DotnotationDict/: DotnotationDictConverter_test.py
UnitTests/DotnotationTableConverter/: DotnotationTableConverter_test.py
UnitTests/Excel/: ExcelExporterTests.py  ExcelExporter_test.py  ExcelImporterTests.py  ExcelImporter_test.py  test_file_VR_output.xlsx
UnitTests/GEOJSON/: GeoJSONExporter_test.py  GeoJSONImporter_test.py  after_export.geojson
UnitTests/IFC/: IFCImporter_test.py
UnitTests/JSON/: DavieDecoderTests.py  DavieDecoder_test.py  JsonExporter_test.py  JsonImporter_test.py  OtlAssetJSONEncoderTests.py  OtlAssetJSONEncoder_test.py
UnitTests/Pandas/: PandasConverter_test.py
UnitTests/PyArrow/: PyArrowConverter_test.py
UnitTests/RDF/: DictDecoder_test.py  JSONLD_export_test.py  JSONLD_import_test.py  JSONLD_test.py  RDFExporterTests.py  RDFExporter_test.py
UnitTests/Subset/: SubsetToolTests.py
UnitTests/TTL/: TtlExporterTests.py
UnitTests/Table/: DotnotationTableConverter_test.py  DotnotationTableExporter_test.py  DotnotationTableImporter_test.py  TableExporter_test.py
UnitTests/htmlcov/: AssetFactory_test_py.html  Converter_generic_test_py.html  Converter_high_level_async_test_py.html  Converter_high_level_test_py.html  DotnotationHelper_test_py.html  DotnotationOnAttribute_test_py.html  FileExporter_test_py.html  __init___py.html  (+337 more)
benchmark/: .gitignore  benchmark_results.txt  create_benchmark_files.py  perform_benchmark.py  perform_benchmark_sourcery.py
otlmow_converter/: AbstractExporter.py  AbstractImporter.py  AssetFactory.py  DotnotationDict.py  DotnotationDictConverter.py  DotnotationHelper.py  FileExporter.py  FileImporter.py  HelperFunctions.py  OTLFacility.py  OtlmowConverter.py  RelationCreator.py  SettingsManager.py  SubsetTool.py  settings_otlmow_converter.json
(+203 files in other folders)
