[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_converter"
version = "1.5"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    'openpyxl >= 3.0',
    'otlmow-model >= 2.13.4.0',
    'rdflib >= 6.0.0',
    'geojson>=3.0.1',
    'prettytable>=3.6.0',
    'lxml>=4.9.3',
    'pandas>=1.3.5',
    'coverage>=3.7.1',
    'pytest>=6.2.5',
    'pytest-cov==4.0.0',
    'pytest-subtests>=0.8.0',
    'cachetools>=5.3.0'
]

[tool.setuptools.packages.find]
include = ["otlmow_converter*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-Converter"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-Converter/issues"
