[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_converter"
version = "1.15rc1"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    'openpyxl >= 3.0',
    'otlmow-model >= 2.15.7.0',
    'rdflib >= 6.0.0',
    'geojson>=3.0.1',
    'prettytable>=3.6.0',
    'lxml>=4.9.3',
    'pandas>=1.3.5'
]

[tool.setuptools.packages.find]
include = ["otlmow_converter*"]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-Converter"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-Converter/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-subtests",
    "pytest-timeout",
    "pytest-asyncio",
    "nbmake"
]
benchmark = [
    "prettytable"
]